mini-batch GD applied

--- a/faceDetection.ipynb
+++ b/faceDetection.ipynb
@@ -20,7 +20,11 @@
       "metadata": {
         "id": "qbu17W8U4ABn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "6b98b01e-e65e-4ced-f940-0909087bde07"
       },
       "cell_type": "code",
       "source": [
@@ -54,8 +58,24 @@
         "\n",
         "!google-drive-ocamlfuse drive"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "gpg: keybox '/tmp/tmplc0vlzhw/pubring.gpg' created\n",
+            "gpg: /tmp/tmplc0vlzhw/trustdb.gpg: trustdb created\n",
+            "gpg: key AD5F235DF639B041: public key \"Launchpad PPA for Alessandro Strada\" imported\n",
+            "gpg: Total number processed: 1\n",
+            "gpg:               imported: 1\n",
+            "Warning: apt-key output should not be parsed (stdout is not a terminal)\n",
+            "··········\n",
+            "fuse: mountpoint is not empty\n",
+            "fuse: if you are sure this is safe, use the 'nonempty' mount option\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -182,7 +202,7 @@
         "    m = x.shape[1]\n",
         "    gradients = {}\n",
         "    last_layer = len(parameters) // 2\n",
-        "    \n",
+        "\n",
         "    gradients['dz'+str(last_layer)] = cache['a'+str(last_layer)] - y.T\n",
         "    gradients['dw'+str(last_layer)] = 1/m * np.dot(gradients['dz'+str(last_layer)], cache['a'+str(last_layer-1)].T) + _lambda/m * parameters['w'+str(last_layer)]\n",
         "    gradients['db'+str(last_layer)] = 1/m * np.sum(gradients['dz'+str(last_layer)], axis=1, keepdims=True)\n",
@@ -266,8 +286,9 @@
       },
       "cell_type": "code",
       "source": [
-        "def multi_Layered_NN(samples, labels, n_hidden, num_iterations, load_last_weights=0, activation=\"tanh\", learning_rate=0.01, _lambda=0, keep_prob_dropout=1.0, print_cost=False):\n",
+        "def multi_Layer_NN(samples, labels, n_hidden, num_iterations, load_last_weights=0, activation=\"tanh\", learning_rate=0.01, _lambda=0, keep_prob_dropout=1.0, print_cost=False):\n",
         "    m = samples.shape[1]\n",
+        "\n",
         "    if load_last_weights == 0:\n",
         "       params = initialize_parameters(samples.shape[0], n_hidden)\n",
         "    else:\n",
@@ -276,18 +297,27 @@
         "    last_layer = len(params) // 2\n",
         "    \n",
         "    for i in range(1, num_iterations+1):\n",
-        "        cache = forward_prop(samples, params, activation, keep_prob_dropout)\n",
-        "        \n",
-        "        gradients = back_prop(samples, labels, cache, params, activation, _lambda, keep_prob_dropout)\n",
-        "        for j in range(1, last_layer+1):\n",
-        "            params['w'+str(j)] -= learning_rate * gradients['dw'+str(j)]\n",
-        "            params['b'+str(j)] -= learning_rate * gradients['db'+str(j)]\n",
+        "        for t in range(10):\n",
+        "          \n",
+        "            cache = forward_prop(samples[:, int(t*m/10):int((t+1)*m/10)], params, activation, keep_prob_dropout)\n",
+        "            \n",
+        "            gradients = back_prop(samples[:, int(t*m/10):int((t+1)*m/10)],\n",
+        "                                  labels[int(t*m/10):int((t+1)*m/10)], \n",
+        "                                  cache, \n",
+        "                                  params, \n",
+        "                                  activation, \n",
+        "                                  _lambda, \n",
+        "                                  keep_prob_dropout)\n",
+        "            \n",
+        "            for j in range(1, last_layer+1):\n",
+        "                params['w'+str(j)] -= learning_rate * gradients['dw'+str(j)]\n",
+        "                params['b'+str(j)] -= learning_rate * gradients['db'+str(j)]\n",
         "\n",
-        "        if print_cost and i%1000 == 0: \n",
+        "        if print_cost: \n",
         "            cost = cost_function(m, labels, cache['a'+str(last_layer)].T, params, _lambda)\n",
-        "            print('cost after iteration {}: {}'.format(int(i), cost))\n",
+        "            print('cost after epoch {}: {}'.format(int(i), cost))\n",
         "            cost_history.append(cost)\n",
-        "            save_weights(params)\n",
+        "              \n",
         "\n",
         "    return {'parameters':params, \n",
         "            'cache': cache,\n",
@@ -364,13 +394,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2c454a79-b254-4c75-86d9-c073aff05b8c"
+        "outputId": "977d6830-4733-4df7-f099-d54baa60a689"
       },
       "cell_type": "code",
       "source": [
         "print(samples.shape, labels.shape)"
       ],
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +425,11 @@
       "metadata": {
         "id": "ycSNfwRy4-3_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 708
+        },
+        "outputId": "78c74960-6b5f-4af9-fa5a-2c99463efa0d"
       },
       "cell_type": "code",
       "source": [
@@ -409,14 +443,46 @@
         "                         n_hidden=[100, 100, 100, 100, 100, 100, 100],\n",
         "                         num_iterations=10000,\n",
         "                         learning_rate=0.1,\n",
-        "                         _lambda = 0.01,\n",
-        "                         keep_prob_dropout= 0.7,\n",
+        "                         _lambda = 0,\n",
+        "                         keep_prob_dropout= 1.0,\n",
         "                         print_cost=True)\n",
         "\n",
         "print(\"Train phase time:\", time.time()-tic)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "before: 56\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ZeroDivisionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-68-2d443991168f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m                          \u001b[0m_lambda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                          \u001b[0mkeep_prob_dropout\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m                          print_cost=True)\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Train phase time:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-60-cd82da8d29a5>\u001b[0m in \u001b[0;36mmulti_Layered_NN\u001b[0;34m(samples, labels, n_hidden, num_iterations, load_last_weights, activation, learning_rate, _lambda, keep_prob_dropout, print_cost)\u001b[0m\n\u001b[1;32m     22\u001b[0m                                   \u001b[0mactivation\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                                   \u001b[0m_lambda\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                                   keep_prob_dropout)\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlast_layer\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-65-e1fa035ad132>\u001b[0m in \u001b[0;36mback_prop\u001b[0;34m(x, y, cache, parameters, activation, _lambda, keep_prob)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mgradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dz'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mgradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dw'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dz'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0m_lambda\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mgradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'db'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dz'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
