--- a/faceDetection.ipynb
+++ b/faceDetection.ipynb
@@ -80,6 +80,7 @@
       "source": [
         "import numpy as np\n",
         "import csv\n",
+        "import math\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.utils import shuffle\n",
         "from scipy.sparse import coo_matrix\n",
@@ -227,22 +228,6 @@
     },
     {
       "metadata": {
-        "id": "nav0_CuqySGQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "def save_weights(parameters):\n",
-        "    for i in range(1, (len(parameters)//2)+1):\n",
-        "        np.save(\"w\"+str(i), parameters['w'+str(i)])\n",
-        "        np.save(\"b\"+str(i), parameters['b'+str(i)])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "DXavV7dnzMlI",
         "colab_type": "code",
         "colab": {}
@@ -280,9 +265,8 @@
         "    last_layer = len(params) // 2\n",
         "    \n",
         "    for i in range(1, num_iterations+1):\n",
-        "        cost = []\n",
         "        \n",
-        "        for t in range(int(m/batch_size)):\n",
+        "        for t in range(math.ceil(m/batch_size)):\n",
         "            \n",
         "            cache = forward_prop(samples[:, int(t*batch_size):int((t+1)*batch_size)], params, activation, keep_prob_dropout)\n",
         "            \n",
@@ -297,13 +281,11 @@
         "            for j in range(1, last_layer+1):\n",
         "                params['w'+str(j)] -= learning_rate * gradients['dw'+str(j)]\n",
         "                params['b'+str(j)] -= learning_rate * gradients['db'+str(j)]\n",
-        "\n",
-        "            cost.append(cost_function(int(batch_size), labels[int(t*batch_size):int((t+1)*batch_size)], cache['a'+str(last_layer)].T, params, _lambda))   \n",
         "             \n",
-        "        if print_cost: \n",
-        "#             cost = cost_function(m, labels, cache['a'+str(last_layer)].T, params, _lambda)\n",
-        "            print('cost after epoch {}: {}'.format(int(i), np.sum(cost)))\n",
-        "            cost_history.append(np.sum(cost))\n",
+        "            if print_cost: \n",
+        "                cost = cost_function(batch_size, labels[int(t*batch_size):int((t+1)*batch_size)], cache['a'+str(last_layer)].T, params, _lambda)\n",
+        "                print('cost after epoch {}: {}'.format(int(i), cost))\n",
+        "                cost_history.append(cost)\n",
         "              \n",
         "    return {'parameters':params, \n",
         "            'cache': cache,\n",
@@ -380,7 +362,9 @@
       },
       "cell_type": "code",
       "source": [
-        "print(samples.shape, labels.shape)"
+        "print(samples.shape, labels.shape)\n",
+        "print(train_data.shape, train_label.shape)\n",
+        "print(test_data.shape, test_label.shape)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -406,16 +390,16 @@
         "import time\n",
         "\n",
         "tic = time.time()\n",
-        "activation_function = 'relu'\n",
+        "activation_function = 'tanh'\n",
         "model = multi_Layer_NN(train_data.T,\n",
         "                         train_label,\n",
         "                         activation=activation_function,\n",
         "                         n_hidden=[100, 100, 100],\n",
         "                         num_iterations=500,\n",
-        "                         batch_size=56,\n",
+        "                         batch_size=64,\n",
         "                         learning_rate=0.1,\n",
-        "                         _lambda = 0.01,\n",
-        "                         keep_prob_dropout= .7,\n",
+        "                         _lambda = 0,\n",
+        "                         keep_prob_dropout= 1,\n",
         "                         print_cost=True)\n",
         "\n",
         "print(\"Train phase time:\", time.time()-tic)"
@@ -490,6 +474,45 @@
         "    print('Human')\n",
         "else:\n",
         "    print('Not-Human')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "zFX6wwPvQbcY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Save the model in files"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "nav0_CuqySGQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def save_weights(parameters):\n",
+        "    for i in range(1, (len(parameters)//2)+1):\n",
+        "        np.save(\"drive/ColabNotebooks/w\"+str(i), parameters['w'+str(i)])\n",
+        "        np.save(\"drive/ColabNotebooks/b\"+str(i), parameters['b'+str(i)])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Kn1AF7RiQmYM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "save_weights(model['parameters'])"
       ],
       "execution_count": 0,
       "outputs": []
